--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -6,11 +6,13 @@ plugins {
 
 android {
     namespace 'com.udacity'
+    //noinspection GradleCompatible
     compileSdk 33
 
     defaultConfig {
         applicationId "com.udacity"
         minSdkVersion 24
+        //noinspection EditedTargetSdkVersion,OldTargetApi
         targetSdkVersion 33
         versionCode 1
         versionName "1.0"
@@ -35,13 +37,22 @@ android {
     }
 }
 
-dependencies {
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+def version_core = "1.3.1"
+def version_app_compat = "1.2.0"
+def version_material = "1.8.0"
+def version_constraint = "2.1.4"
+def version_junit = "4.13.2"
+def version_androidx_junit = "1.1.5"
+def version_espresso = "3.5.1"
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+dependencies {
+    //noinspection GradleDependency
+    implementation "androidx.core:core-ktx:$version_core"
+    implementation "androidx.appcompat:appcompat:$version_app_compat"
+    implementation "com.google.android.material:material:$version_material"
+    implementation "androidx.constraintlayout:constraintlayout:$version_constraint"
+
+    testImplementation "junit:junit:$version_junit"
+    androidTestImplementation "androidx.test.ext:junit:$version_androidx_junit"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$version_espresso"
 }
